<resources>
    <string name="app_name">Practica5Armenta</string>
    <string name="welcome_text">Welcome to the Portales!</string>
    <string name="welcome_description">Taqueria Los Portales is a quick, casual restaurant!</string>
    <string name="button_start">Get started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept the terms and conditions of the Portales</string>
    <string name="sign_in">Sign in</string>

    <string name="menu">Our menu</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinaciones">Combinaciones</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>
</resources>