<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img2"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/grupo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/menu"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:paddingHorizontal="50dp">

        <Button
            android:id="@+id/antojitosBtn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/antojitos"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/especialidadesBtn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/especialidades"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/combinationsBtn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/combinaciones"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/tortasBtn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_text"
            android:text="@string/tortas"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sopasBtn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_text"
            android:text="@string/sopas"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/drinksBtn"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_text"
            android:text="@string/drinks"
            android:textColor="@color/white" />


    </GridLayout>


</LinearLayout>